src/test/c/reject/29-invalid-operator.arcx
a:int = 5;
b:int = a $ 2; 